# interview-cracker

./: .gitignore  README.md  build-release.sh  index.html  install.ps1  install.sh  launch.sh  openrouterfree.md  package-lock.json  package.json  quick-install.ps1  quick-install.sh  uninstall.ps1  uninstall.sh  vite.config.ts
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  audio.rs  auto_mode.rs  db.rs  documents.rs  main.rs  screen_hiding.rs  screenshot.rs  settings.rs  stealth.rs  transcription.rs
src/lib/: Chat.svelte  History.svelte  KeyboardHelp.svelte  Overlay.svelte  Settings.svelte  Toast.svelte
